[tool.poetry]
name = "NetSM"
version = "0.1.0"
description = ""
authors = ["XavierJiezou <878972272@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true