[tool.poetry]
name = "NetSM"
version = "0.1.1"
description = "Cross-platform lib for network speed monitoring in Python"
license = "MIT"
authors = ["XavierJiezou <878972272@qq.com>"]
readme = "README.md"
repository = "https://github.com/XavierJiezou/NetSM"
homepage = "https://github.com/XavierJiezou/NetSM"
keywords = ["network speed", "monitor"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
